# titleSongnameDetect

./: .gitignore  LICENSE  README.md  titleSongname.csv
src/cpp/: titleSongnameDetect.cpp  titleSongnameDetect.hpp
src/js/: package-lock.json  package.json
src/js/src/: index.ts
src/python/: titleSongnameDetect.py
test/: testdata_large.csv  testdata_mini.csv
test/cpp/: CMakeLists.txt  cpptest.cpp
test/js/: package-lock.json  package.json
test/js/src/: index.ts
test/python/: index.py
